FIXED added nowrap to navbar to prevent nav item splitting over 2 lines

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,7 @@ body {
 
 .nav-item {
     padding-right: 15px;
+    white-space: nowrap;
 }
 
 p.navbar-name {
